# technopark

./: .gitignore
algorithms_course/: .gitignore
algorithms_course/Sem_1/: CMakeLists.txt  main.cpp
algorithms_course/Sem_2/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_1/task1_1/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_1/task2_3/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_1/task3_3/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_1/task4_4/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_1/task5_2/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_1/task6_1/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_1/task7_3/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_2/task1_1/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_2/task2_3/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_2/task3_1/: BasicTree.cpp  CMakeLists.txt  first_version.cpp  main.cpp
algorithms_course/hw/module_2/task4_2/: CMakeLists.txt  main.cpp
algorithms_course/hw/module_3/task1/: CArcGraph.cpp  CArcGraph.h  CListGraph.cpp  CListGraph.h  CMakeLists.txt  CMatrixGraph.cpp  CMatrixGraph.h  CSetGraph.h  (+4 more)
algorithms_course/hw/module_3/task5_1/: CMakeLists.txt  DSU.cpp  DSU.h  Graph.cpp  Graph.h  KruskalsAlgorithm.cpp  KruskalsAlgorithm.h  RandomPointsGenerator.cpp  RandomPointsGenerator.h  Tests.cpp  Tests.h  TravellingSalesmanProblem.cpp  TravellingSalesmanProblem.h  forContest.cpp  main.cpp
algorithms_course/sem3/: CMakeLists.txt  main.cpp
c_cpp_course/hw_advC_n1/: CMakeLists.txt  main.c  testInput2.txt
(+7 files in other folders)
